# B-rep-Sweep-operation

./: CMakeLists.txt  README.md
HEDS/: Application.cpp  CMakeLists.txt
HEDS/ConstructSolid/: ConstructSolid.cpp  ConstructSolid.h
HEDS/HalfEdgeClass/: Edge.h  Face.h  HEDS.cpp  HEDS.h  HalfEdge.h  Loop.h  Solid.h  Vertex.h
HEDS/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
HEDS/res/shaders/: LightingBoxFragment.shader  SolidFragment.shader  SolidVertex.shader  UnlitFragment.shader  UnlitVertex.shader  WireFrameFragment.shader
HEDS/res/solidConstructFiles/: test.solid
